--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -79,7 +79,7 @@
     let accessToken = null;
     let myId = null;
 
-    const API_BASE = 'http://localhost:8080/api';
+    const API_BASE = 'http://52.79.234.127:8080/api';
 
     // --- 1. 인증 관련 함수 ---
     async function sendEmail() {
